Created table page version

--- a/src/html/page.html
+++ b/src/html/page.html
@@ -11,38 +11,44 @@
 
     <article class="content">
         <div class="row">
-            <div class="col-lg-9">
+            <div class="content-main col-lg-9">
                 <h1>Курсы дизайна интерьера</h1>
 
                 <div class="page-info">
-                    <div class="page-info__title text-bold">Длительность обучения - 9 месяцев. Оплата 14 000 руб. в месяц.</div>
+                    <div class="page-info__title text-bold">Длительность обучения&nbsp;&mdash; 9&nbsp;месяцев. Оплата 14&nbsp;000&nbsp;руб.&nbsp;в&nbsp;месяц.</div>
                     <div class="row page-info-box">
                         <div class="col-lg-6">
                             <div class="page-info-box__title">Приобретение смежных специальностей:</div>
                             <ul class="list-check list-unstyled">
                                 <li class="list-check-item"><a href="#">дизайнер интерьера</a>,</li>
                                 <li class="list-check-item"><a href="#">дизайнер-декоратор</a>,</li>
-                                <li class="list-check-item"><a href="#">художник - живописец</a>.</li>
+                                <li class="list-check-item"><a href="#">художник&nbsp;&mdash; живописец</a>.</li>
                             </ul>
                         </div>
                         <div class="col-lg-6">
-                            <div class="page-info-box__title">Бесплатно - <a href="#">Мастер-классы</a> 1 раз в неделю.</div>
-                            <div class="page-info-box__title">Приятный бонус - кофе и печеньки.</div>
+                            <div class="page-info-box__title">Бесплатно&nbsp;&mdash; <a href="#">Мастер-классы</a> 1&nbsp;раз в&nbsp;неделю.</div>
+                            <div class="page-info-box__title">Приятный бонус&nbsp;&mdash; кофе и&nbsp;печеньки.</div>
                         </div>
                     </div>
                     <ul class="squared-list list-unstyled">
-                        <li class="squared-list-item">Государственный экзамен - работа с вашим первым заказчиком.</li>
-                        <li class="squared-list-item">Диплом о профессиональной переподготовке.</li>
-                        <li class="squared-list-item">Трудоустройство - дизайн-бюро РГУ им. А.Н. Косыгина.</li>
+                        <li class="squared-list-item">Государственный экзамен&nbsp;&mdash; работа с&nbsp;вашим первым заказчиком.</li>
+                        <li class="squared-list-item">Диплом о&nbsp;профессиональной переподготовке.</li>
+                        <li class="squared-list-item">Трудоустройство&nbsp;&mdash; дизайн-бюро РГУ им. А.Н. Косыгина.</li>
                     </ul>
                 </div>
             </div>
-            <aside class="aside-page col-lg-3">
-                <div class="aside-title">
+            <aside class="content-aside col-lg-3">
+                <div class="content-aside__title">
                     Школа дизайна интерьера<br>
                     ПРЕДЛАГАЕТ:
                 </div>
-                <ul class="services">
+                <div class="content-aside__toggle">
+                    <svg class="content-aside__toggle-icon">
+                        <use xlink:href="img/icons.svg#education"></use>
+                    </svg>
+                    Список курсов
+                </div>
+                <ul class="services hide">
                     <li class="services-item">
                         <a href="#" class="services-link">
                             <svg class="services-icon">
@@ -96,7 +102,7 @@
         </div>
 
         <div class="schedule row">
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-sm-6">
                 <div class="schedule-box">
                     <div class="schedule-box__title">Вечерние группы</div>
                     <div class="schedule-box__text">
@@ -105,7 +111,7 @@
                     <div class="schedule-box__bottom">c 19.00 до 22.00</div>
                 </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-sm-6">
                 <div class="schedule-box">
                     <div class="schedule-box__title">Дневные группы</div>
                     <div class="schedule-box__text">
@@ -114,7 +120,7 @@
                     <div class="schedule-box__bottom">с 14.00 до 17.00</div>
                 </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-sm-6">
                 <div class="schedule-box">
                     <div class="schedule-box__title">Группа выходного дня</div>
                     <div class="schedule-box__text">
@@ -124,7 +130,7 @@
                     <div class="schedule-box__bottom">с 12:00 до 18:00</div>
                 </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-sm-6">
                 <div class="schedule-box schedule-box__dist">
                     <a href="#" class="schedule-box__title">Дистанционное обучение</a>
                     <a href="#" rel="nofollow" class="schedule-box__text">
@@ -136,16 +142,16 @@
         </div>
 
         <div class="info-links row">
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-sm-6">
                 <a href="#" class="info-links-item btn btn-secondary">ознакомиться с учебным планом</a>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-sm-6">
                 <a href="#" class="info-links-item btn btn-secondary">зарегистрироваться в новую группу</a>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-sm-6">
                 <a href="#" class="info-links-item btn btn-secondary">посмотреть дипломные работы</a>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-sm-6">
                 <a href="#" class="info-links-write btn btn-primary" rel="nofollow">ЗАПИСАТЬСЯ НА КУРСЫ</a>
             </div>
         </div>
@@ -158,7 +164,7 @@
         </p>
         
         <div class="video-section row">
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-sm-6">
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe allowfullscreen="" src="https://www.youtube.com/embed/0e3V9ni9QPU"></iframe>
                 </div>
@@ -166,7 +172,7 @@
                     Татьяна Куликова
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-sm-6">
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe allowfullscreen="" src="https://www.youtube.com/embed/PmJOtA3Xa70"></iframe>
                 </div>
@@ -174,7 +180,7 @@
                     Рена Алиева
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-sm-6">
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe allowfullscreen="" src="https://www.youtube.com/embed/3U4LZtuF1U8"></iframe>
                 </div>
