Created mobile page version

--- a/src/html/page.html
+++ b/src/html/page.html
@@ -15,7 +15,10 @@
                 <h1>Курсы дизайна интерьера</h1>
 
                 <div class="page-info">
-                    <div class="page-info__title text-bold">Длительность обучения&nbsp;&mdash; 9&nbsp;месяцев. Оплата 14&nbsp;000&nbsp;руб.&nbsp;в&nbsp;месяц.</div>
+                    <div class="page-info__title text-bold">
+                        Длительность обучения&nbsp;&mdash; 9&nbsp;месяцев. <br class="show-xs">
+                        Оплата 14&nbsp;000&nbsp;руб.&nbsp;в&nbsp;месяц.
+                    </div>
                     <div class="row page-info-box">
                         <div class="col-lg-6">
                             <div class="page-info-box__title">Приобретение смежных специальностей:</div>
@@ -106,18 +109,18 @@
                 <div class="schedule-box">
                     <div class="schedule-box__title">Вечерние группы</div>
                     <div class="schedule-box__text">
-                        Занятия обязательные для посещения 2 раза в неделю по будням
+                        Занятия обязательные для посещения 2&nbsp;раза в&nbsp;неделю по&nbsp;будням
                     </div>
-                    <div class="schedule-box__bottom">c 19.00 до 22.00</div>
+                    <div class="schedule-box__bottom">c&nbsp;19.00 до&nbsp;22.00</div>
                 </div>
             </div>
             <div class="col-lg-3 col-sm-6">
                 <div class="schedule-box">
                     <div class="schedule-box__title">Дневные группы</div>
                     <div class="schedule-box__text">
-                        Занятия обязательные для посещения 2 раза в неделю по будням
+                        Занятия обязательные для посещения 2&nbsp;раза в&nbsp;неделю по&nbsp;будням
                     </div>
-                    <div class="schedule-box__bottom">с 14.00 до 17.00</div>
+                    <div class="schedule-box__bottom">с&nbsp;14.00 до&nbsp;17.00</div>
                 </div>
             </div>
             <div class="col-lg-3 col-sm-6">
@@ -125,16 +128,16 @@
                     <div class="schedule-box__title">Группа выходного дня</div>
                     <div class="schedule-box__text">
                         Занятия обязательные для посещения проходят
-                        по субботам
+                        по&nbsp;субботам
                     </div>
-                    <div class="schedule-box__bottom">с 12:00 до 18:00</div>
+                    <div class="schedule-box__bottom">с&nbsp;12:00 до&nbsp;18:00</div>
                 </div>
             </div>
             <div class="col-lg-3 col-sm-6">
                 <div class="schedule-box schedule-box__dist">
                     <a href="#" class="schedule-box__title">Дистанционное обучение</a>
                     <a href="#" rel="nofollow" class="schedule-box__text">
-                        Для вашего удобства мы создали полноценные занятия дистанционно!
+                        Для вашего удобства мы&nbsp;создали полноценные занятия дистанционно!
                     </a>
                     <a href="tel:+79259259330" rel="nofollow" class="schedule-box__bottom">+7 (925) 925 93 30</a>
                 </div>
@@ -143,26 +146,26 @@
 
         <div class="info-links row">
             <div class="col-lg-3 col-sm-6">
-                <a href="#" class="info-links-item btn btn-secondary">ознакомиться с учебным планом</a>
+                <a href="#" class="info-links-item btn btn-secondary">ознакомиться с&nbsp;учебным планом</a>
             </div>
             <div class="col-lg-3 col-sm-6">
-                <a href="#" class="info-links-item btn btn-secondary">зарегистрироваться в новую группу</a>
+                <a href="#" class="info-links-item btn btn-secondary">зарегистрироваться в&nbsp;новую группу</a>
             </div>
             <div class="col-lg-3 col-sm-6">
                 <a href="#" class="info-links-item btn btn-secondary">посмотреть дипломные работы</a>
             </div>
             <div class="col-lg-3 col-sm-6">
-                <a href="#" class="info-links-write btn btn-primary" rel="nofollow">ЗАПИСАТЬСЯ НА КУРСЫ</a>
+                <a href="#" class="info-links-write btn btn-primary" rel="nofollow">ЗАПИСАТЬСЯ НА&nbsp;КУРСЫ</a>
             </div>
         </div>
-        
+
 
         <h2>Дизайн интерьера обучение</h2>
 
         <p>
-            Сегодня быть дизайнером интерьера – это значит работать в одной из самых интересных и быстроразвивающихся областей, там, где гармонично соединяется художественное творчество и современные технологии. Уметь быстро, красиво и эффектно набросать скетч своей идеи, а потом, используя самые современные программы выполнить готовое проектное решение, предусмотрев как все композиционные и цветовые особенности дизайнерского решения, так и все характеристики, и стоимость используемых материалов, аксессуаров, мебели и техники.
+            Сегодня быть дизайнером интерьера&nbsp;&mdash; это значит работать в&nbsp;одной из&nbsp;самых интересных и&nbsp;быстроразвивающихся областей, там, где гармонично соединяется художественное творчество и&nbsp;современные технологии. Уметь быстро, красиво и&nbsp;эффектно набросать скетч своей идеи, а&nbsp;потом, используя самые современные программы выполнить готовое проектное решение, предусмотрев как все композиционные и&nbsp;цветовые особенности дизайнерского решения, так и&nbsp;все характеристики, и&nbsp;стоимость используемых материалов, аксессуаров, мебели и&nbsp;техники.
         </p>
-        
+
         <div class="video-section row">
             <div class="col-lg-4 col-sm-6">
                 <div class="embed-responsive embed-responsive-16by9">
@@ -190,36 +193,36 @@
             </div>
         </div>
 
-        <h2>Дизайн интерьера – настоящая профессия будущего</h2>
+        <h2>Дизайн интерьера&nbsp;&mdash; настоящая профессия будущего</h2>
         <p>
-            Специальность, полученная в нашем вузе – это возможность не только создавать законченный интерьер жилой квартиры, но и шанс начать специализироваться в самых различных направлениях. Посещая бесплатные дополнительные занятия по прикладным искусствам, таким как керамика, мозаика, батик и витражи вы сможете не только создавать авторский интерьер, но и самостоятельно декорировать его, в выбранной вами технике. Дополнительное изучение ландшафтного дизайна, позволит вам разработать не только интерьер загородного дома, но и выполнить ландшафтный проект всего окружающего участка. Посещая дополнительные бесплатные занятия по разработке мебели, вы сможете не только включать в разрабатываемый вами интерьер готовые предметы мебели, но и сами создавать проекты эксклюзивной мебели. Получив образование в нашей школе дизайна, вы сможете выполнять самый широкий спектр работ, связанных с дизайном интерьера, получая высокую оплату.
+            Специальность, полученная в&nbsp;нашем вузе&nbsp;&mdash; это возможность не&nbsp;только создавать законченный интерьер жилой квартиры, но&nbsp;и&nbsp;шанс начать специализироваться в&nbsp;самых различных направлениях. Посещая бесплатные дополнительные занятия по&nbsp;прикладным искусствам, таким как керамика, мозаика, батик и&nbsp;витражи вы&nbsp;сможете не&nbsp;только создавать авторский интерьер, но&nbsp;и&nbsp;самостоятельно декорировать его, в&nbsp;выбранной вами технике. Дополнительное изучение ландшафтного дизайна, позволит вам разработать не&nbsp;только интерьер загородного дома, но&nbsp;и&nbsp;выполнить ландшафтный проект всего окружающего участка. Посещая дополнительные бесплатные занятия по&nbsp;разработке мебели, вы&nbsp;сможете не&nbsp;только включать в&nbsp;разрабатываемый вами интерьер готовые предметы мебели, но&nbsp;и&nbsp;сами создавать проекты эксклюзивной мебели. Получив образование в&nbsp;нашей школе дизайна, вы&nbsp;сможете выполнять самый широкий спектр работ, связанных с&nbsp;дизайном интерьера, получая высокую оплату.
         </p>
-        <h2>Чему мы учим на курсах дизайна интерьера</h2>
-        <p class="text-bold">Всего через 9 месяцев наши студенты смогут:</p>
+        <h2>Чему мы&nbsp;учим на&nbsp;курсах дизайна интерьера</h2>
+        <p class="text-bold">Всего через 9&nbsp;месяцев наши студенты смогут:</p>
         <ul>
-            <li>разрабатывать с нуля варианты любой сложности. От самых простых и небольших до объёмных, требующих особого внимания;</li>
-            <li>дорабатывать некогда начатые проекты на различных стадиях: от предварительных эскизов и наработок до их реализации в камне;</li>
-            <li>браться за жилые, офисные или нежилые помещения. Каждый из них имеет свои тонкости и особенности, которые «горе-специалисты» не учитывают или в полной мере, или вовсе;</li>
-            <li>общаться с заказчиком, понимать его желания и цели. Даже если он сам не в состоянии их сформулировать, имея лишь поверхностное представление об ожидаемом результате;</li>
-            <li>использовать все необходимые для специалистов такого уровня инструменты и софт. Основные программы, помогающие в работе, 3ds Max и ArchiCAD, выпускники знают великолепно: высококвалифицированные педагоги и собственная техническая база с лицензионным программным обеспечением позволяет моделировать и просчитывать даже самые сложные проекты, внося коррективы всего несколькими движениями мышки;</li>
-            <li>перепланировать помещение. Ещё одна, очень важная составляющая: без неё полноценное проектирование часто невозможно. Наши выпускники видят шире, чем в пределах одного помещения, ограниченного четырьмя стенами: их необычные предложения позволяют кардинально преобразить самую обычную планировку;</li>
-            <li>сочетать цвета, фактуры материалов, подбирать мебель и декоративные элементы для разрабатываемого проекта, рассчитывать освещение. Всё то, что позволяет сделать обычную комнату центром комфорта и уюта;</li>
-            <li>рассчитывать все коммуникации. Электропроводку и розетки, отопление, в том числе и тёплые полы, потолки, окна и двери, если необходимо, водопровод и канализацию: для наших студентов нет мелочей;</li>
-            <li>наконец, экономить время. Нередко готовый проект необходим «позавчера»: наши выпускники после&nbsp;<b>курсов дизайна интерьера</b>не только грамотно распределяют трудозатраты, но и могут контролировать работы смежников. Даже незначительных задержек, а тем более длительных простоев по их вине просто не бывает.</li>
+            <li>разрабатывать с&nbsp;нуля варианты любой сложности. От&nbsp;самых простых и&nbsp;небольших до&nbsp;объёмных, требующих особого внимания;</li>
+            <li>дорабатывать некогда начатые проекты на&nbsp;различных стадиях: от&nbsp;предварительных эскизов и&nbsp;наработок до&nbsp;их&nbsp;реализации в&nbsp;камне;</li>
+            <li>браться за&nbsp;жилые, офисные или нежилые помещения. Каждый из&nbsp;них имеет свои тонкости и&nbsp;особенности, которые &laquo;горе-специалисты&raquo; не&nbsp;учитывают или в&nbsp;полной мере, или вовсе;</li>
+            <li>общаться с&nbsp;заказчиком, понимать его желания и&nbsp;цели. Даже если он&nbsp;сам не&nbsp;в&nbsp;состоянии их&nbsp;сформулировать, имея лишь поверхностное представление об&nbsp;ожидаемом результате;</li>
+            <li>использовать все необходимые для специалистов такого уровня инструменты и&nbsp;софт. Основные программы, помогающие в&nbsp;работе, 3ds Max и&nbsp;ArchiCAD, выпускники знают великолепно: высококвалифицированные педагоги и&nbsp;собственная техническая база с&nbsp;лицензионным программным обеспечением позволяет моделировать и&nbsp;просчитывать даже самые сложные проекты, внося коррективы всего несколькими движениями мышки;</li>
+            <li>перепланировать помещение. Ещё одна, очень важная составляющая: без неё полноценное проектирование часто невозможно. Наши выпускники видят шире, чем в&nbsp;пределах одного помещения, ограниченного четырьмя стенами: их&nbsp;необычные предложения позволяют кардинально преобразить самую обычную планировку;</li>
+            <li>сочетать цвета, фактуры материалов, подбирать мебель и&nbsp;декоративные элементы для разрабатываемого проекта, рассчитывать освещение. Всё&nbsp;то, что позволяет сделать обычную комнату центром комфорта и&nbsp;уюта;</li>
+            <li>рассчитывать все коммуникации. Электропроводку и&nbsp;розетки, отопление, в&nbsp;том числе и&nbsp;тёплые полы, потолки, окна и&nbsp;двери, если необходимо, водопровод и&nbsp;канализацию: для наших студентов нет мелочей;</li>
+            <li>наконец, экономить время. Нередко готовый проект необходим &laquo;позавчера&raquo;: наши выпускники после <b>курсов дизайна интерьера</b>не только грамотно распределяют трудозатраты, но&nbsp;и&nbsp;могут контролировать работы смежников. Даже незначительных задержек, а&nbsp;тем более длительных простоев по&nbsp;их&nbsp;вине просто не&nbsp;бывает.</li>
         </ul>
-        <p>Поэтому вне зависимости от объёмов, нужно ли разработать макет маленькой квартирки-студии, или фронт предстоящих работ — многоэтажное офисное здание, заказчик всегда получает комплексное решение под ключ.</p>
+        <p>Поэтому вне зависимости от&nbsp;объёмов, нужно&nbsp;ли разработать макет маленькой квартирки-студии, или фронт предстоящих работ&nbsp;&mdash; многоэтажное офисное здание, заказчик всегда получает комплексное решение под ключ.</p>
 
         <h2 id="kursy_dizayna_interyera">Курсы дизайна интерьера. Учебный план.</h2>
 
         <div class="content-text">
-            Предметы, обязательные для посещения - 280 часов.<br>
-            Факультативные дисциплины – Бесплатно – 280 часов.
+            Предметы, обязательные для посещения&nbsp;&mdash; 280&nbsp;часов.<br>
+            Факультативные дисциплины&nbsp;&mdash; Бесплатно&nbsp;&mdash; 280&nbsp;часов.
         </div>
 
         <table class="table">
             <thead>
             <tr>
-                <th>Наименование разделов и дисциплин</th>
+                <th>Наименование разделов и&nbsp;дисциплин</th>
                 <th>Часы</th>
                 <th>Преподаватель</th>
             </tr>
@@ -231,69 +234,69 @@
                 <td><a href="kolpakova">Колпакова А.Ю.</a></td>
             </tr>
             <tr>
-                <td><a href="kompoziciya">Композиция</a><br>
+                <td><a href="kompoziciya">Композиция</a> <br>
                     <a href="cvetovedenie">Цветоведение</a></td>
                 <td>48</td>
-                <td><a href="shubina">Шубина А.В.</a><br>
+                <td><a href="shubina">Шубина А.В.</a> <br>
                     <a href="volodina">Володина Е.Б.</a></td>
             </tr>
             <tr>
                 <td><a href="kursy-adobe-photoshop-cs5-6">Adobe Photoshop СС</a>
                     <br>
-                    <a href="3d_max">3d Max</a><br>
-                    <a href="archicad">ArchiCAD</a><br>
+                    <a href="3d_max">3d&nbsp;Max</a> <br>
+                    <a href="archicad">ArchiCAD</a> <br>
                     <a href="artlantis">Artlantis</a></td>
                 <td>116</td>
-                <td><a href="panov">Панов Р.С.</a><br>
-                    <a href="vyshegorodskih">Вышегородских Б.А.</a><br>
-                    <a href="kvasha">Кваша Наталья</a><br>
+                <td><a href="panov">Панов Р.С.</a> <br>
+                    <a href="vyshegorodskih">Вышегородских Б.А.</a> <br>
+                    <a href="kvasha">Кваша Наталья</a> <br>
                     <a href="razina">Разина Екатерина</a></td>
             </tr>
             <tr>
-                <td><a href="pereplanirovka">Перепланировка помещений. Проектирование</a><br>
-                    <a href="arhitekturnaya-graphika">Архитектурная графика</a><br>
+                <td><a href="pereplanirovka">Перепланировка помещений. Проектирование</a> <br>
+                    <a href="arhitekturnaya-graphika">Архитектурная графика</a> <br>
                     <a href="arhitekturno-disaynerskoe-proektirovanie">Строительное черчение</a></td>
                 <td>44</td>
                 <td><a href="kulikova">Куликова Т.Ю.</a></td>
             </tr>
             <tr>
-                <td><a href="vypusknaya-dizain-interyera">Индивидуальные занятия по дипломному проектированию</a></td>
+                <td><a href="vypusknaya-dizain-interyera">Индивидуальные занятия по&nbsp;дипломному проектированию</a></td>
                 <td>40</td>
-                <td><a href="vyshegorodskih">Вышегородских Б.А.</a><br>
+                <td><a href="vyshegorodskih">Вышегородских Б.А.</a> <br>
                     <a href="kvasha">Кваша Наталья</a></td>
             </tr>
             </tbody>
         </table>
 
-        <h3>Дополнительные дисциплины, которые вы можете посещать бесплатно:</h3>
+        <h3>Дополнительные дисциплины, которые вы&nbsp;можете посещать бесплатно:</h3>
 
         <table class="table">
             <thead>
             <tr>
-                <th>Наименование разделов и дисциплин</th>
+                <th>Наименование разделов и&nbsp;дисциплин</th>
                 <th>Часы</th>
                 <th>Преподаватель</th>
             </tr>
             </thead>
             <tbody>
             <tr>
-                <th>Наименование разделов и дисциплин</th>
+                <th>Наименование разделов и&nbsp;дисциплин</th>
                 <th>Часы</th>
                 <th>Преподаватель</th>
             </tr>
             <tr>
-                <td><a href="materialovedenie">Материаловедение в дизайне</a><br>
+                <td><a href="materialovedenie">Материаловедение в&nbsp;дизайне</a> <br>
                     <a href="proektnaya-documentaciya">Оформление проектной документации</a></td>
                 <td>20</td>
                 <td><a href="volodina">Володина Е.Б.</a></td>
             </tr>
             <tr>
-                <td><a href="style-v-interyere">Стили в интерьере</a></td>
+                <td><a href="style-v-interyere">Стили в&nbsp;интерьере</a></td>
                 <td>16</td>
                 <td><a href="volodina">Володина Е.Б.</a></td>
             </tr>
             <tr>
-                <td><a href="obschenie-s-zakazchikami">Общение с заказчиками</a></td>
+                <td><a href="obschenie-s-zakazchikami">Общение с&nbsp;заказчиками</a></td>
                 <td>12</td>
                 <td>Елена Каф</td>
             </tr>
@@ -313,7 +316,7 @@
                 <td><a href="hohlovkin">Хохловкин Д.В.</a></td>
             </tr>
             <tr>
-                <td><a href="tekstil-v-interyere">Текстиль в интерьере</a></td>
+                <td><a href="tekstil-v-interyere">Текстиль в&nbsp;интерьере</a></td>
                 <td>20</td>
                 <td><a href="smolyaninova">Смолянинова Светлана</a></td>
             </tr>
@@ -328,20 +331,20 @@
                 <td><a href="phohlovkin">Хохловкин П.В.</a></td>
             </tr>
             <tr>
-                <td><a href="kurs-batika">Курс по батику</a></td>
+                <td><a href="kurs-batika">Курс по&nbsp;батику</a></td>
                 <td>16</td>
                 <td><a href="kolpakova">Колпакова А.Ю.</a></td>
             </tr>
             <tr>
                 <td><a href="vitragi">Курсы витража</a></td>
                 <td>24</td>
-                <td><a href="ostapenko">Остапенко Е.</a></td>
+                <td><a href="ostapenko">Остапенко&nbsp;Е.</a></td>
             </tr>
             <tr>
-                <td><a href="risunok">Курсы рисунка</a><br>
+                <td><a href="risunok">Курсы рисунка</a> <br>
                     <a href="jivopis">Курсы живописи</a></td>
                 <td>280</td>
-                <td><a href="kolpakova">Колпакова А.Ю.</a><br>
+                <td><a href="kolpakova">Колпакова А.Ю.</a> <br>
                     <a href="tkach">Ткач Дмитрий</a></td>
             </tr>
             <tr>
