--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -32,8 +32,13 @@
 
         <div class="header-support">
             <div class="header-support__contact">
-                <a href="tel:+74952011300" class="header-support__contact-phone" rel="nofollow"><span class="header-support__contact-phone--code">+7
-                    (495)</span> <span class="text-bold">201-13-00</span></a>
+                <a href="tel:+74952011300" class="header-support__contact-phone" rel="nofollow">
+                    <svg class="header-support__contact-icon">
+                        <use xlink:href="img/icons.svg#phone"></use>
+                    </svg>
+                    <span class="header-support__contact-phone--code">+7(495)</span>
+                    <span class="text-bold">201-13-00</span>
+                </a>
                 <div class="header-support__contact-address">г. Москва, Садовническая ул. 33</div>
             </div>
             <div class="header-social">
