--- a/src/html/page2.html
+++ b/src/html/page2.html
@@ -74,96 +74,18 @@
         </aside>
 
         <div class="content-main col-lg-9">
-            <h1>Курсы дизайна интерьера</h1>
-
-            <div class="page-info">
-                <div class="page-info__title text-bold">
-                    Длительность обучения&nbsp;&mdash; 9&nbsp;месяцев. <br class="show-xs">
-                    Оплата 14&nbsp;000&nbsp;руб.&nbsp;в&nbsp;месяц.
-                </div>
-                <div class="row page-info-box">
-                    <div class="col-lg-6">
-                        <div class="page-info-box__title">Приобретение смежных специальностей:</div>
-                        <ul class="list-check list-unstyled">
-                            <li class="list-check-item"><a href="#">дизайнер интерьера</a>,</li>
-                            <li class="list-check-item"><a href="#">дизайнер-декоратор</a>,</li>
-                            <li class="list-check-item"><a href="#">художник&nbsp;&mdash; живописец</a>.</li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="page-info-box__title">Бесплатно&nbsp;&mdash; <a href="#">Мастер-классы</a> 1&nbsp;раз в&nbsp;неделю.</div>
-                        <div class="page-info-box__title">Приятный бонус&nbsp;&mdash; кофе и&nbsp;печеньки.</div>
-                    </div>
-                </div>
-                <ul class="squared-list list-unstyled">
-                    <li class="squared-list-item">Государственный экзамен&nbsp;&mdash; работа с&nbsp;вашим первым заказчиком.</li>
-                    <li class="squared-list-item">Диплом о&nbsp;профессиональной переподготовке.</li>
-                    <li class="squared-list-item">Трудоустройство&nbsp;&mdash; дизайн-бюро РГУ им. А.Н. Косыгина.</li>
-                </ul>
-            </div>
+            <h1>Курсы живописи и рисунка. Школа живописи и рисунка.</h1>
         </div>
-
-        <div class="schedule row">
-            <div class="col-lg-3 col-sm-6">
-                <div class="schedule-box">
-                    <div class="schedule-box__title">Вечерние группы</div>
-                    <div class="schedule-box__text">
-                        Занятия обязательные для посещения 2&nbsp;раза в&nbsp;неделю по&nbsp;будням
-                    </div>
-                    <div class="schedule-box__bottom">c&nbsp;19.00 до&nbsp;22.00</div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="schedule-box">
-                    <div class="schedule-box__title">Дневные группы</div>
-                    <div class="schedule-box__text">
-                        Занятия обязательные для посещения 2&nbsp;раза в&nbsp;неделю по&nbsp;будням
-                    </div>
-                    <div class="schedule-box__bottom">с&nbsp;14.00 до&nbsp;17.00</div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="schedule-box">
-                    <div class="schedule-box__title">Группа выходного дня</div>
-                    <div class="schedule-box__text">
-                        Занятия обязательные для посещения проходят
-                        по&nbsp;субботам
-                    </div>
-                    <div class="schedule-box__bottom">с&nbsp;12:00 до&nbsp;18:00</div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="schedule-box schedule-box__dist">
-                    <a href="#" class="schedule-box__title">Дистанционное обучение</a>
-                    <a href="#" rel="nofollow" class="schedule-box__text">
-                        Для вашего удобства мы&nbsp;создали полноценные занятия дистанционно!
-                    </a>
-                    <a href="tel:+79259259330" rel="nofollow" class="schedule-box__bottom">+7 (925) 925 93 30</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="info-links row">
-            <div class="col-lg-3 col-sm-6">
-                <a href="#id1" class="go-anchor info-links-item btn btn-secondary">ознакомиться с&nbsp;учебным
-                    планом</a>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <a href="#" class="info-links-item btn btn-secondary">зарегистрироваться в&nbsp;новую группу</a>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <a href="#" class="info-links-item btn btn-secondary">посмотреть дипломные работы</a>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div  class="info-links-write btn btn-primary js-open-modal" data-modal="1">ЗАПИСАТЬСЯ НА&nbsp;КУРСЫ</div>
-            </div>
-        </div>
-
 
         <h2>Дизайн интерьера обучение</h2>
 
         <p>
             Сегодня быть дизайнером интерьера&nbsp;&mdash; это значит работать в&nbsp;одной из&nbsp;самых интересных и&nbsp;быстроразвивающихся областей, там, где гармонично соединяется художественное творчество и&nbsp;современные технологии. Уметь быстро, красиво и&nbsp;эффектно набросать скетч своей идеи, а&nbsp;потом, используя самые современные программы выполнить готовое проектное решение, предусмотрев как все композиционные и&nbsp;цветовые особенности дизайнерского решения, так и&nbsp;все характеристики, и&nbsp;стоимость используемых материалов, аксессуаров, мебели и&nbsp;техники.
+        </p>
+
+        <h2>Дизайн интерьера&nbsp;&mdash; настоящая профессия будущего</h2>
+        <p>
+            Специальность, полученная в&nbsp;нашем вузе&nbsp;&mdash; это возможность не&nbsp;только создавать законченный интерьер жилой квартиры, но&nbsp;и&nbsp;шанс начать специализироваться в&nbsp;самых различных направлениях. Посещая бесплатные дополнительные занятия по&nbsp;прикладным искусствам, таким как керамика, мозаика, батик и&nbsp;витражи вы&nbsp;сможете не&nbsp;только создавать авторский интерьер, но&nbsp;и&nbsp;самостоятельно декорировать его, в&nbsp;выбранной вами технике. Дополнительное изучение ландшафтного дизайна, позволит вам разработать не&nbsp;только интерьер загородного дома, но&nbsp;и&nbsp;выполнить ландшафтный проект всего окружающего участка. Посещая дополнительные бесплатные занятия по&nbsp;разработке мебели, вы&nbsp;сможете не&nbsp;только включать в&nbsp;разрабатываемый вами интерьер готовые предметы мебели, но&nbsp;и&nbsp;сами создавать проекты эксклюзивной мебели. Получив образование в&nbsp;нашей школе дизайна, вы&nbsp;сможете выполнять самый широкий спектр работ, связанных с&nbsp;дизайном интерьера, получая высокую оплату.
         </p>
 
         <div class="video-section row">
@@ -192,11 +114,6 @@
                 </div>
             </div>
         </div>
-
-        <h2>Дизайн интерьера&nbsp;&mdash; настоящая профессия будущего</h2>
-        <p>
-            Специальность, полученная в&nbsp;нашем вузе&nbsp;&mdash; это возможность не&nbsp;только создавать законченный интерьер жилой квартиры, но&nbsp;и&nbsp;шанс начать специализироваться в&nbsp;самых различных направлениях. Посещая бесплатные дополнительные занятия по&nbsp;прикладным искусствам, таким как керамика, мозаика, батик и&nbsp;витражи вы&nbsp;сможете не&nbsp;только создавать авторский интерьер, но&nbsp;и&nbsp;самостоятельно декорировать его, в&nbsp;выбранной вами технике. Дополнительное изучение ландшафтного дизайна, позволит вам разработать не&nbsp;только интерьер загородного дома, но&nbsp;и&nbsp;выполнить ландшафтный проект всего окружающего участка. Посещая дополнительные бесплатные занятия по&nbsp;разработке мебели, вы&nbsp;сможете не&nbsp;только включать в&nbsp;разрабатываемый вами интерьер готовые предметы мебели, но&nbsp;и&nbsp;сами создавать проекты эксклюзивной мебели. Получив образование в&nbsp;нашей школе дизайна, вы&nbsp;сможете выполнять самый широкий спектр работ, связанных с&nbsp;дизайном интерьера, получая высокую оплату.
-        </p>
         <h2>Чему мы&nbsp;учим на&nbsp;курсах дизайна интерьера</h2>
         <p class="text-bold">Всего через 9&nbsp;месяцев наши студенты смогут:</p>
         <ul>
@@ -219,7 +136,7 @@
             Факультативные дисциплины&nbsp;&mdash; Бесплатно&nbsp;&mdash; 280&nbsp;часов.
         </div>
 
-        <table class="table" id="id1">
+        <table class="table">
             <thead>
             <tr>
                 <th>Наименование разделов и&nbsp;дисциплин</th>
